# nft-evenswap-solana

./: .gitpod.yaml  .gitpod.yml  Anchor.toml  README.md  nft-evenswap-solana.code-workspace  package.json  pnpm-lock.yaml
app/evenswap/: package-lock.json  package.json
app/evenswap/app/: page.tsx
app/evenswap/src/app/: metaplex.tsx  nft.tsx  nft2.tsx  nft3.tsx  page.tsx  solana.tsx  useMetaplex.js  wallet.tsx
demo/: README.md  presenrarion.key
programs/evenswap/: Cargo.toml
programs/evenswap/src/: lib.rs
tests/: evenswap.ts
