[package]
name = "evenswap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "evenswap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
ahash = "=0.8.4"